<resources>
    <string name="app_name">Medico</string>
    <string name="user_id">User ID</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="specialization">Specialization</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="user_email">Email</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="app_image">App Image</string>
    <string name="or_create_a_new_account">or create a new account</string>
    <string name="sign_up_doctor">Sign Up as a Doctor</string>
    <string name="sign_up_patient">Sign Up as a Patient</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_item">history item</string>
</resources>