<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A628C"
    tools:context=".MainActivity"
    tools:ignore="LabelFor">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="310dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/m2"
        android:contentDescription="@string/app_image" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="411dp"
        android:layout_height="93dp"
        android:background="#CE2E79B5"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <LinearLayout
        android:id="@+id/sign_up_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="320dp"

        android:layout_marginEnd="20dp"
        android:background="@drawable/layout_bg"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/id_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_id"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:paddingStart="3dp"
                android:text="@string/user_id"
                android:textColor="#006064"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/useridsmall"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/user_id_input"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:autofillHints="userid"
                android:inputType="textShortMessage"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:paddingStart="3dp"
                android:text="@string/password"
                android:textColor="#006064"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/passwordsmall"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="password"
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <!--        <RadioGroup-->
        <!--            android:id="@+id/user_type"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            tools:visibility="invisible">-->

        <!--            <RadioButton-->
        <!--                android:id="@+id/doctor"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:text="@string/doctor"-->
        <!--                android:textColor="#4E342E"-->
        <!--                android:textSize="16sp"-->
        <!--                app:drawableStartCompat="@drawable/dcotorsmall1" />-->

        <!--            <RadioButton-->
        <!--                android:id="@+id/patient"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:text="@string/patient"-->
        <!--                android:textColor="#4E342E"-->
        <!--                android:textSize="16sp"-->
        <!--                app:drawableStartCompat="@drawable/patientsmall" />-->
        <!--        </RadioGroup>-->

    </LinearLayout>

    <Button
        android:id="@+id/sign_up_doc"
        android:layout_width="355dp"
        android:layout_height="69dp"
        android:background="@drawable/button_bg"
        android:backgroundTint="#053740"
        android:text="@string/sign_up_doctor"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_info"
        app:layout_constraintVertical_bias="0.94"
        tools:visibility="visible" />

    <Button
        android:id="@+id/sign_up_pat"
        android:layout_width="354dp"
        android:layout_height="68dp"
        android:background="@drawable/button_bg"
        android:backgroundTint="#053740"
        android:text="@string/sign_up_patient"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_info"
        app:layout_constraintVertical_bias="0.509"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:text="@string/or_create_a_new_account"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="132dp"
        android:text="or"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:backgroundTint="#053740"
        android:text="@string/signin"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_info"
        app:layout_constraintVertical_bias="0.07" />
</androidx.constraintlayout.widget.ConstraintLayout>