<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A628C"
    tools:context=".MainActivity"
    tools:ignore="LabelFor">

    <ImageView
        android:id="@+id/img"
        android:layout_width="410dp"
        android:layout_height="249dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002"
        app:srcCompat="@drawable/m2" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="409dp"
        android:layout_height="107dp"
        android:background="#CE2E79B5"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819" />

    <LinearLayout
        android:id="@+id/sign_up_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="290dp"

        android:layout_marginEnd="20dp"
        android:background="@drawable/layout_bg"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:paddingStart="3dp"
                android:text="@string/user_email"
                android:textColor="#006064"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/emailsmall"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="61dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_id"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:paddingStart="3dp"
                android:text="@string/user_id"
                android:textColor="#006064"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/useridsmall"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/user_id_input"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:autofillHints="userid"
                android:inputType="textShortMessage"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:paddingStart="3dp"
                android:text="@string/name"
                android:textColor="#006064"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/namesmall"
                tools:ignore="NestedWeights,RtlSymmetry" />

            <EditText
                android:id="@+id/name_input"
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:inputType="textShortMessage"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:paddingStart="3dp"
                android:text="@string/password"
                android:textColor="#006064"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/passwordsmall"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="password"
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/age_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/age"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:paddingStart="3dp"
                android:text="@string/age"
                android:textColor="#006064"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_baseline_person_outline_24"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/age_input"
                android:layout_width="61dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="location"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/gender_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gender"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:paddingStart="3dp"
                android:text="@string/gender"
                android:textColor="#006064"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_baseline_person_outline_24"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/gender_input"
                android:layout_width="61dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="contact"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/contact"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:paddingStart="3dp"
                android:text="@string/contact"
                android:textColor="#006064"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_outline_call_24"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/contact_input"
                android:layout_width="61dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="contact"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/sign_up_doc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:backgroundTint="#053740"
        android:text="@string/signup"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_info"
        app:layout_constraintVertical_bias="0.662" />
</androidx.constraintlayout.widget.ConstraintLayout>